Unexpected non-working flexbox gaps properties, fixed by using margins

--- a/style.css
+++ b/style.css
@@ -545,7 +545,10 @@ img {
 
 .contact-and-address-info {
   margin: 1.4cm 2.4cm 0 2.5cm;
-  gap: 0.8cm;
+}
+
+.contact-and-address-info > p:first-child {
+  margin-left: 0.8cm;
 }
 
 .contact-and-address-info > p {
